0.4.0
=====
- [feature] The command line runner has been organized
  into a reusable CommandLine object, so that other
  front-ends can re-use the argument parsing built
  in.  #70

- [bug] Fixed MySQL rendering for server_default which
  didn't work if the server_default was a generated
  SQL expression.  Courtesy Moriyoshi Koizumi.

- [feature] Added support for alteration of MySQL
  columns that have AUTO_INCREMENT, as well as enabling
  this flag.  Courtesy Moriyoshi Koizumi.

0.3.6
=====
- [feature] Added include_symbol option to
  EnvironmentContext.configure(),
  specifies a callable which will include/exclude tables
  in their entirety from the autogeneration process
  based on name.  #27

- [feature] Added year, month, day, hour, minute, second
  variables to file_template.  #59

- [feature] Added 'primary' to the list of constraint types
  recognized for MySQL drop_constraint().

- [feature] Added --sql argument to the "revision" command,
  for the use case where the "revision_environment"
  config option is being used but SQL access isn't
  desired.

- [bug] Repaired create_foreign_key() for
  self-referential foreign keys, which weren't working
  at all.

- [bug] 'alembic' command reports an informative
  error message when the configuration is missing
  the 'script_directory' key.  #63

- [bug] Fixes made to the constraints created/dropped
  alongside so-called "schema" types such as
  Boolean and Enum.  The create/drop constraint logic
  does not kick in when using a dialect that doesn't
  use constraints for these types, such as postgresql,
  even when existing_type is specified to
  alter_column().  Additionally, the constraints
  are not affected if existing_type is passed but
  type_ is not, i.e. there's no net change
  in type.  #62

- [bug] Improved error message when specifiying
  non-ordered revision identifiers to cover
  the case when the "higher" rev is None,
  improved message overall.  #66

0.3.5
=====